// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildList allows child counts to be toggled on 1`] = `
<div
  className="childlist"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
       
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto childlist__toggles css-1wrgmsj-MuiGrid-root"
    >
      <button
        onClick={[Function]}
      >
        Show Thumbnails
      </button>
      <button
        onClick={[Function]}
      >
        Show Models
      </button>
      <button
        onClick={[Function]}
      >
        Hide Child Counts
      </button>
    </div>
  </div>
  <ul
    className="childlist__list"
  >
    <li>
      Child
    </li>
  </ul>
</div>
`;

exports[`ChildList allows models to be toggled on 1`] = `
<div
  className="childlist"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
       
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto childlist__toggles css-1wrgmsj-MuiGrid-root"
    >
      <button
        onClick={[Function]}
      >
        Show Thumbnails
      </button>
      <button
        onClick={[Function]}
      >
        Hide Models
      </button>
      <button
        onClick={[Function]}
      >
        Show Child Counts
      </button>
    </div>
  </div>
  <ul
    className="childlist__list"
  >
    <li>
      Child
    </li>
  </ul>
</div>
`;

exports[`ChildList allows thumbnails to be toggled on 1`] = `
<div
  className="childlist"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
       
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto childlist__toggles css-1wrgmsj-MuiGrid-root"
    >
      <button
        onClick={[Function]}
      >
        Hide Thumbnails
      </button>
      <button
        onClick={[Function]}
      >
        Show Models
      </button>
      <button
        onClick={[Function]}
      >
        Show Child Counts
      </button>
    </div>
  </div>
  <ul
    className="childlist__list"
  >
    <li>
      Child
    </li>
  </ul>
</div>
`;

exports[`ChildList displays a paginator when appropriate 1`] = `
<div
  className="childlist"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    >
      <p
        className="childlist__pagination"
      >
        Showing 
        1
         - 
        10
         of
         
        10000
      </p>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    >
      Pagination
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
       
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto childlist__toggles css-1wrgmsj-MuiGrid-root"
    >
      <button
        onClick={[Function]}
      >
        Show Thumbnails
      </button>
      <button
        onClick={[Function]}
      >
        Show Models
      </button>
      <button
        onClick={[Function]}
      >
        Show Child Counts
      </button>
    </div>
  </div>
  <ul
    className="childlist__list"
  >
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
    <li>
      Child
    </li>
  </ul>
</div>
`;

exports[`ChildList renders using SelectableChild when a callback is provided 1`] = `
<div
  className="childlist"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
       
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto childlist__toggles css-1wrgmsj-MuiGrid-root"
    >
      <button
        onClick={[Function]}
      >
        Show Thumbnails
      </button>
      <button
        onClick={[Function]}
      >
        Show Models
      </button>
      <button
        onClick={[Function]}
      >
        Show Child Counts
      </button>
    </div>
  </div>
  <ul
    className="childlist__list"
  >
    <li>
      SelectableChild
    </li>
  </ul>
</div>
`;

exports[`ChildList renders using ajax-loaded object data 1`] = `
<div
  className="childlist"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
       
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto childlist__toggles css-1wrgmsj-MuiGrid-root"
    >
      <button
        onClick={[Function]}
      >
        Show Thumbnails
      </button>
      <button
        onClick={[Function]}
      >
        Show Models
      </button>
      <button
        onClick={[Function]}
      >
        Show Child Counts
      </button>
    </div>
  </div>
  <ul
    className="childlist__list"
  >
    <li>
      Child
    </li>
  </ul>
</div>
`;

exports[`ChildList renders using ajax-loaded root data 1`] = `
<div
  className="childlist"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-ofrcno-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1wrgmsj-MuiGrid-root"
    />
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
       
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto childlist__toggles css-1wrgmsj-MuiGrid-root"
    >
      <button
        onClick={[Function]}
      >
        Show Thumbnails
      </button>
      <button
        onClick={[Function]}
      >
        Show Models
      </button>
      <button
        onClick={[Function]}
      >
        Show Child Counts
      </button>
    </div>
  </div>
  <ul
    className="childlist__list"
  >
    <li>
      Child
    </li>
  </ul>
</div>
`;
